force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <label>LV Contract</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>