force-app/main/default/objects/Contract__c/fields/A1cReduction__c.field-meta.xml
<CustomField>
    <fullName>A1cReduction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Performance Guarantee Type: A1c Reduction</description>
    <inlineHelpText>Integrated with NetSuite</inlineHelpText>
    <label>A1c Reduction</label>
    <type>Checkbox</type>
</CustomField>