force-app/main/default/objects/Contract__c/fields/Ability_to_run_ROI_analysis__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_run_ROI_analysis__c</fullName>
    <label>Ability to run ROI analysis?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>