force-app/main/default/objects/Contract__c/fields/Access_to_Employee_Emails__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Employee_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that Livongo has access to employee emails for direct marketing</description>
    <inlineHelpText>Indicates that Livongo has access to employee emails for direct marketing</inlineHelpText>
    <label>Access to Employee Emails</label>
    <type>Checkbox</type>
</CustomField>