force-app/main/default/objects/Contract__c/fields/Accessible_Covered_Lives__c.field-meta.xml
<CustomField>
    <fullName>Accessible_Covered_Lives__c</fullName>
    <label>Accessible Covered Lives</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>