force-app/main/default/objects/Contract__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Edits Controlled - Financially Material -  Flows to Redshift</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>LVGO_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>