force-app/main/default/objects/Contract__c/fields/Account_Client_Overview__c.field-meta.xml
<CustomField>
    <fullName>Account_Client_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Client Overview)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Client Overviews</relationshipLabel>
    <relationshipName>ClientOverviews</relationshipName>
    <type>Lookup</type>
</CustomField>