force-app/main/default/objects/Contract__c/fields/Account_has_SLAs__c.field-meta.xml
<CustomField>
    <fullName>Account_has_SLAs__c</fullName>
    <inlineHelpText>Edits Controlled - Financially Material</inlineHelpText>
    <label>Account has SLAs?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>