force-app/main/default/objects/Contract__c/fields/Account_Partner_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links Partner Agreements to the Partner Accounts</description>
    <label>Account (Partner Agreement)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Partner Agreements</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>