force-app/main/default/objects/Contract__c/fields/Account_Program_Overview__c.field-meta.xml
<CustomField>
    <fullName>Account_Program_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Program Overview)</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Program Overviews</relationshipLabel>
    <relationshipName>ProgramOverviews</relationshipName>
    <type>Lookup</type>
</CustomField>