force-app/main/default/objects/Contract__c/fields/Accountid__c.field-meta.xml
<CustomField>
    <fullName>Accountid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>LVGO_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>