force-app/main/default/objects/Contract__c/fields/ActivateContract__c.field-meta.xml
<CustomField>
    <fullName>ActivateContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used behind the scenes by SpringCM to trigger a process flow that determines whether to flip Status to Activate or Re-Activate.</description>
    <inlineHelpText>This field is used behind the scenes by SpringCM to trigger a process flow that determines whether to flip Status to Activate or Re-Activate.</inlineHelpText>
    <label>Activate Contract</label>
    <type>Checkbox</type>
</CustomField>