force-app/main/default/objects/Contract__c/fields/ActivatedBy__c.field-meta.xml
<CustomField>
    <fullName>ActivatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActivatedById</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Activated_Contracts</relationshipLabel>
    <relationshipName>LGVO_Activated_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>