force-app/main/default/objects/Contract__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Checked if today’s date is &gt;= Contract Effective Date AND &lt;= Contract End Date</description>
    <formula>AND( TODAY() &gt;= StartDate__c, TODAY() &lt;=  ContractRenewalDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if today’s date is &gt;= Contract Effective Date AND &lt;= Contract End Date</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>