force-app/main/default/objects/Contract__c/fields/Actual_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Launch_Date__c</fullName>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Edits Controlled - Financially Material -  Flows to Redshift</inlineHelpText>
    <label>Initial Launch Date</label>
    <type>Date</type>
</CustomField>