force-app/main/default/objects/Contract__c/fields/Add_a_Union_Bug_to_Marketing_Material__c.field-meta.xml
<CustomField>
    <fullName>Add_a_Union_Bug_to_Marketing_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add a Union Bug to Marketing Material</label>
    <type>Checkbox</type>
</CustomField>