force-app/main/default/objects/Contract__c/fields/Additional_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_information__c</fullName>
    <description>Note any information that is not captured in other sections.</description>
    <inlineHelpText>Note any information that is not captured in other sections.</inlineHelpText>
    <label>Additional information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>