force-app/main/default/objects/Contract__c/fields/Additional_Questions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Questions__c</fullName>
    <inlineHelpText>An additional registration question. This question will be asked in addition to all the default registration questions found in livongo.enrollment_default_registration_questions for that program (NULL + PROGRAM).</inlineHelpText>
    <label>Additional Questions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a1c - Optional</fullName>
            </value>
            <value>
                <fullName>a1c - Required</fullName>
            </value>
            <value>
                <fullName>a1cLastCheckedUTC - Optional</fullName>
            </value>
            <value>
                <fullName>a1cLastCheckedUTC - Required</fullName>
            </value>
            <value>
                <fullName>addressLine1 - Optional</fullName>
            </value>
            <value>
                <fullName>addressLine1 - Required</fullName>
            </value>
            <value>
                <fullName>addressLine2 - Optional</fullName>
            </value>
            <value>
                <fullName>addressLine2 - Required</fullName>
            </value>
            <value>
                <fullName>birthDate - Optional</fullName>
            </value>
            <value>
                <fullName>birthDate - Required</fullName>
            </value>
            <value>
                <fullName>cardiacEjectionFraction - Optional</fullName>
            </value>
            <value>
                <fullName>cardiacEjectionFraction - Required</fullName>
            </value>
            <value>
                <fullName>city - Optional</fullName>
            </value>
            <value>
                <fullName>city - Required</fullName>
            </value>
            <value>
                <fullName>diabetesType - Optional</fullName>
            </value>
            <value>
                <fullName>diabetesType - Required</fullName>
            </value>
            <value>
                <fullName>diagnosisRecency - Optional</fullName>
            </value>
            <value>
                <fullName>diagnosisRecency - Required</fullName>
            </value>
            <value>
                <fullName>education - Optional</fullName>
            </value>
            <value>
                <fullName>education - Required</fullName>
            </value>
            <value>
                <fullName>email - Optional</fullName>
            </value>
            <value>
                <fullName>email - Required</fullName>
            </value>
            <value>
                <fullName>everDiagnosedWithDiabetes - Optional</fullName>
            </value>
            <value>
                <fullName>everDiagnosedWithDiabetes - Required</fullName>
            </value>
            <value>
                <fullName>everHospitalized - Optional</fullName>
            </value>
            <value>
                <fullName>everHospitalized - Required</fullName>
            </value>
            <value>
                <fullName>firstName - Optional</fullName>
            </value>
            <value>
                <fullName>firstName - Required</fullName>
            </value>
            <value>
                <fullName>gender - Optional</fullName>
            </value>
            <value>
                <fullName>gender - Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>