force-app/main/default/objects/Contract__c/fields/Approach_to_health_and_wellness__c.field-meta.xml
<CustomField>
    <fullName>Approach_to_health_and_wellness__c</fullName>
    <description>Programs client has in place, overall landscape, general weight status.</description>
    <inlineHelpText>Programs client has in place, overall landscape, general weight status.</inlineHelpText>
    <label>Approach to health and wellness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>