force-app/main/default/objects/Contract__c/fields/Are_there_marketing_DOPS_requirements__c.field-meta.xml
<CustomField>
    <fullName>Are_there_marketing_DOPS_requirements__c</fullName>
    <description>JENGA-1174</description>
    <label>Are there marketing &amp; DOPS requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>