force-app/main/default/objects/Contract__c/fields/At_No_Cost_to_You_Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>At_No_Cost_to_You_Alt_Text__c</fullName>
    <description>Client preferred alternative to mention of &quot;at no cost to you&quot; in assets.</description>
    <inlineHelpText>Client preferred alternative to mention of &quot;at no cost to you&quot; in assets.</inlineHelpText>
    <label>At No Cost to You Alt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>