force-app/main/default/objects/Contract__c/fields/Automated_Enrollment_Injection__c.field-meta.xml
<CustomField>
    <fullName>Automated_Enrollment_Injection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Enrollment Injection</label>
    <type>Checkbox</type>
</CustomField>