force-app/main/default/objects/Contract__c/fields/BAA_Signed__c.field-meta.xml
<CustomField>
    <fullName>BAA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a BAA has been signed, as a part of or in addition to the active contract</description>
    <inlineHelpText>Indicates if a BAA has been signed, as a part of or in addition to the active contract</inlineHelpText>
    <label>BAA Signed?</label>
    <type>Checkbox</type>
</CustomField>