force-app/main/default/objects/Contract__c/fields/Behavioral_Health_ID__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Health_ID__c</fullName>
    <label>Behavioral Health ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>