force-app/main/default/objects/Contract__c/fields/Bill_Early_Termination_Through_Claims__c.field-meta.xml
<CustomField>
    <fullName>Bill_Early_Termination_Through_Claims__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Early Termination Through Claims</label>
    <type>Checkbox</type>
</CustomField>