force-app/main/default/objects/Contract__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <description>Integrated with Redshift and NetSuite</description>
    <inlineHelpText>Edits Controlled - Financially Material -  Flows to Redshift</inlineHelpText>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Invoice through Enterprise / Client</fullName>
            </value>
            <value>
                <fullName>Direct Invoice through Partner / Payer</fullName>
            </value>
            <value>
                <fullName>Medical Claims TPA/ASO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>