force-app/main/default/objects/Contract__c/fields/Billing_Partner_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Billing_Partner_Admin_Fee__c</fullName>
    <description>For Finance/Billing to capture the admin fee to be paid to the Billing Partner for a particular program. Integrated with NetSuite and Redshift.</description>
    <inlineHelpText>Integrated with NetSuite and Redshift</inlineHelpText>
    <label>Billing Partner Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>