force-app/main/default/objects/Contract__c/fields/Billing_Partner_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Partner_Fee_Type__c</fullName>
    <label>Billing Partner Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>