force-app/main/default/objects/Contract__c/fields/Billing_POC__c.field-meta.xml
<CustomField>
    <fullName>Billing_POC__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing Point Of Contact</label>
    <referenceTo>Contact__c</referenceTo>
    <relationshipLabel>Contracts (Billing POC)</relationshipLabel>
    <relationshipName>LVGO_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>