force-app/main/default/objects/Contract__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <label>Billing Address</label>
    <length>55</length>
    <type>Text</type>
</CustomField>