force-app/main/default/objects/Contract__c/fields/BillingPartner__c.field-meta.xml
<CustomField>
    <fullName>BillingPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Integrated with NetSuite</description>
    <inlineHelpText>Integrated with NetSuite</inlineHelpText>
    <label>Billing Partner</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Contracts (Billing Partner)</relationshipLabel>
    <relationshipName>LVGO_Contracts_BillingPartner</relationshipName>
    <type>Lookup</type>
</CustomField>