force-app/main/default/objects/Contract__c/fields/BMI_Limit__c.field-meta.xml
<CustomField>
    <fullName>BMI_Limit__c</fullName>
    <inlineHelpText>Qualification bmiLimit (not the same as &apos;bmi_limit_asian_american&apos;)</inlineHelpText>
    <label>BMI Limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>