force-app/main/default/objects/Contract__c/fields/BundledPricingDiscount__c.field-meta.xml
<CustomField>
    <fullName>BundledPricingDiscount__c</fullName>
    <description>This is the dollar amount discount that is to be used in calculated the bundled pricing in Netsuite.</description>
    <inlineHelpText>Integrated with NetSuite</inlineHelpText>
    <label>Bundled Pricing Discount</label>
    <length>25</length>
    <type>Text</type>
</CustomField>