force-app/main/default/objects/Contract__c/fields/Business_Review_Stipulations__c.field-meta.xml
<CustomField>
    <fullName>Business_Review_Stipulations__c</fullName>
    <description>Describes any requirements around regular business reviews. May provide link to partner scorecard template.</description>
    <inlineHelpText>Describes any requirements around regular business reviews. May provide link to partner scorecard template.</inlineHelpText>
    <label>Business Review Stipulations</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>