force-app/main/default/objects/Contract__c/fields/Campaign_Lifecycle_Participation__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Lifecycle_Participation__c</fullName>
    <description>Ongoing campaigns that the client allows us to send</description>
    <inlineHelpText>Ongoing campaigns that the client allows us to send</inlineHelpText>
    <label>Campaign Lifecycle Participation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pop Refresh</fullName>
            </value>
            <value>
                <fullName>Relaunch</fullName>
            </value>
            <value>
                <fullName>TLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>