force-app/main/default/objects/Contract__c/fields/Campaign_Participation__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Participation__c</fullName>
    <description>Integrated with Redshift.Added new values</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Campaign Participation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2021 DM Reduced Plan</fullName>
            </value>
            <value>
                <fullName>Custom Campaign</fullName>
            </value>
            <value>
                <fullName>Enrollment on Autopilot</fullName>
            </value>
            <value>
                <fullName>myStrength Reduced Plan</fullName>
            </value>
            <value>
                <fullName>Optimized Enrollment Plan</fullName>
            </value>
            <value>
                <fullName>Partnership Campaign</fullName>
            </value>
            <value>
                <fullName>Partnership Downmarket Campaign</fullName>
            </value>
            <value>
                <fullName>Phone Campaign no Cell</fullName>
            </value>
            <value>
                <fullName>Phone Campaign with Cell</fullName>
            </value>
            <value>
                <fullName>Pop Refresh</fullName>
            </value>
            <value>
                <fullName>Relaunch</fullName>
            </value>
            <value>
                <fullName>TLC</fullName>
            </value>
            <value>
                <fullName>2021 OEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>