force-app/main/default/objects/Contract__c/fields/Campaign_Participation_EoA_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Participation_EoA_Date__c</fullName>
    <description>Date when Enrollment on Autopilot was last added/removed from Campaign Participation.</description>
    <inlineHelpText>Date when Enrollment on Autopilot was last added/removed from Campaign Participation.</inlineHelpText>
    <label>Campaign Participation EoA Date</label>
    <type>Date</type>
</CustomField>