force-app/main/default/objects/Contract__c/fields/Campaign_Participation_EoA_Include__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Participation_EoA_Include__c</fullName>
    <formula>INCLUDES( Campaign_Participation__c, &quot;Enrollment on Autopilot&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Participation EoA Include</label>
    <type>Checkbox</type>
</CustomField>