force-app/main/default/objects/Contract__c/fields/Campaign_Participation_TLC_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Participation_TLC_Date__c</fullName>
    <description>Date when &quot;TLC&quot; was last added/removed from Campaign Participation.</description>
    <inlineHelpText>Date when &quot;TLC&quot; was last added/removed from Campaign Participation.</inlineHelpText>
    <label>Deprecated Campaign ParticipationTLCDate</label>
    <type>Date</type>
</CustomField>