force-app/main/default/objects/Contract__c/fields/Campaign_Participation_TLC_Included__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Participation_TLC_Included__c</fullName>
    <formula>INCLUDES( Campaign_Participation__c , &quot;TLC&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Participation TLC Included</label>
    <type>Checkbox</type>
</CustomField>