force-app/main/default/objects/Contract__c/fields/Cardio_Features_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Cardio_Features_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if cardio features are enabled for the contract.  Flows to Redshift</inlineHelpText>
    <label>Cardio Features Enabled</label>
    <type>Checkbox</type>
</CustomField>