force-app/main/default/objects/Contract__c/fields/Cardio_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cardio_Start_Date__c</fullName>
    <inlineHelpText>Identifies the start date a client receives cardiometabolic benefits. Flows to Redshift</inlineHelpText>
    <label>Cardio Start Date</label>
    <type>Date</type>
</CustomField>