force-app/main/default/objects/Contract__c/fields/cbi_disclaimer__c.field-meta.xml
<CustomField>
    <fullName>cbi_disclaimer__c</fullName>
    <label>Client Incentives Disclaimer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>