force-app/main/default/objects/Contract__c/fields/cbi_header__c.field-meta.xml
<CustomField>
    <fullName>cbi_header__c</fullName>
    <label>Client Incentives Header</label>
    <type>TextArea</type>
</CustomField>