force-app/main/default/objects/Contract__c/fields/cbi_step3__c.field-meta.xml
<CustomField>
    <fullName>cbi_step3__c</fullName>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Client Incentive Step 3</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>