force-app/main/default/objects/Contract__c/fields/CDC_Enrollment_Source__c.field-meta.xml
<CustomField>
    <fullName>CDC_Enrollment_Source__c</fullName>
    <label>CDC Enrollment Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Non-primary care health professional</fullName>
            </value>
            <value>
                <fullName>Primary care provider/office</fullName>
            </value>
            <value>
                <fullName>Community-based organization</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Family/friends</fullName>
            </value>
            <value>
                <fullName>An employer or employer&apos;s wellness program</fullName>
            </value>
            <value>
                <fullName>Insurance company</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not reported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>