force-app/main/default/objects/Contract__c/fields/CDC_Payer_Type__c.field-meta.xml
<CustomField>
    <fullName>CDC_Payer_Type__c</fullName>
    <label>CDC Payer Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Private Insurer</fullName>
            </value>
            <value>
                <fullName>Self-pay</fullName>
            </value>
            <value>
                <fullName>Dual Eligible (Medicare and Medicaid)</fullName>
            </value>
            <value>
                <fullName>Grant funding</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>