force-app/main/default/objects/Contract__c/fields/Chronic_Kidney_Disease_Id__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Kidney_Disease_Id__c</fullName>
    <label>Chronic Kidney Disease Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>