force-app/main/default/objects/Contract__c/fields/CIM__c.field-meta.xml
<CustomField>
    <fullName>CIM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Client Implementation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LGVO_Client_Overviews</relationshipName>
    <type>Lookup</type>
</CustomField>