force-app/main/default/objects/Contract__c/fields/CKD_Aware_Variant__c.field-meta.xml
<CustomField>
    <fullName>CKD_Aware_Variant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked if the programs are CKD Aware Variant. This is populated when the POs are created.</description>
    <label>CKD Aware Variant</label>
    <type>Checkbox</type>
</CustomField>