force-app/main/default/objects/Contract__c/fields/Claims_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Claims_Configuration__c</fullName>
    <description>added new values,bcbs,</description>
    <label>Claims Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>