force-app/main/default/objects/Contract__c/fields/Client_Able_to_Send_HR_Comms__c.field-meta.xml
<CustomField>
    <fullName>Client_Able_to_Send_HR_Comms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enrollment Marketing - Client Overview</description>
    <label>Client Able to Send HR Comms?</label>
    <type>Checkbox</type>
</CustomField>