force-app/main/default/objects/Contract__c/fields/Client_Able_to_Whitelist__c.field-meta.xml
<CustomField>
    <fullName>Client_Able_to_Whitelist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enrollment Marketing field - Client Overview</description>
    <label>Client Able to Whitelist?</label>
    <type>Checkbox</type>
</CustomField>