force-app/main/default/objects/Contract__c/fields/Client_Allows_AB_Testing_of__c.field-meta.xml
<CustomField>
    <fullName>Client_Allows_AB_Testing_of__c</fullName>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Client Allows A/B Testing of:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Incentives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>