force-app/main/default/objects/Contract__c/fields/Client_Allows_Targeted_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Client_Allows_Targeted_Marketing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Integrated with Redshift,Defaulted to true</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Client Allows Targeted Marketing?</label>
    <type>Checkbox</type>
</CustomField>