force-app/main/default/objects/Contract__c/fields/Client_Documentation_Structure__c.field-meta.xml
<CustomField>
    <fullName>Client_Documentation_Structure__c</fullName>
    <description>Indicates how clients must be contracted through this partner</description>
    <inlineHelpText>Indicates how clients must be contracted through this partner</inlineHelpText>
    <label>Client Documentation Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Confirmation Schedule</fullName>
            </value>
            <value>
                <fullName>Program Agreement</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>