force-app/main/default/objects/Contract__c/fields/Client_expects_ROI__c.field-meta.xml
<CustomField>
    <fullName>Client_expects_ROI__c</fullName>
    <label>Client Expects ROI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>